# dctl

./: .gitignore  ARRI_LogC2Video_P3DCI_davinci3d_33.cube  CMakeLists.txt  MS-CAT02.h  MS-Cineon-Exposure.dctl  MS-Cineon-Invert.dctl  MS-Cineon-Transform.dctl  MS-Cineon.dctl  MS-Cineon.h  MS-Common.h  MS-Gen5-Transform.dctl  MS-Gen5.h  MS-Grade.dctl  MS-LogC3-Exposure.dctl  MS-LogC3-Expsure.dctl  MS-LogC3-Print.dctl  MS-LogC3-Temperature.dctl  MS-LogC3-Transform.dctl  MS-LogC3.h  MS-Rec709.h  MS-Saturation.dctl  MS-Stripify.dctl  MS-Temperature.dctl  MS-Utils.h  MS-grade.dctl  PD-CAT02.h  PD-Cineon-Exposure.dctl  PD-Cineon-Invert.dctl  PD-Cineon-Transform.dctl  PD-Cineon.h  PD-DCIP3.h  PD-Gen5-Transform.dctl  PD-Grade.dctl  PD-LogC3-Exposure.dctl  PD-LogC3-Print.dctl  PD-LogC3-Temperature.dctl  PD-LogC3-Transform.dctl  PD-Rec709.h  PD-Saturation.dctl  PD-Stripify.dctl  (+7 more)
resources/: logctool_ei800_3840x2160.exr
